[package]
name = "celestium-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3.1"
futures = { version = "0.3", default-features=false }
cached = "0.23.0"

[dependencies.celestium]
path = "../celestium-lib"
version = "0.1.0"

[features]
mining-ez-mode = ["celestium/mining-ez-mode"]
